home/transmission/transmission.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: jellyfin
  name: transmission-deployment
  labels:
    app: transmission
spec:
  replicas: 1
  selector:
    matchLabels:
      app: transmission
  template:
    metadata:
      labels:
        app: transmission
    spec:
      securityContext:
        runAsUser: 1000
        runAsGroup: 1000
        fsGroup: 1000
      containers:
      - image: registry.opensuse.org/home/spacemule/branches/opensuse/templates/images/tumbleweed/containers/transmission
        name: transmission
        command:
          - /usr/bin/transmission-daemon
        args:
          - --foreground
          - --config-dir
          - /conf
        securityContext:
          capabilities: {}
        volumeMounts:
          - name: jellyfin-pvc
            mountPath: /torrents
            subPath: torrents
          - name: config-vol
            mountPath: /conf/settings.json
            subPath: settings.json
          - name: jellyfin-pvc
            mountPath: /conf
            subPath: transmission-conf
        resources:
          requests:
            memory: "128Mi"
            cpu: "50m"
        ports:
          - containerPort: 9091
            name: transmission
        livenessProbe:
          httpGet:
            path: /transmission/web/
            port: transmission
          initialDelaySeconds: 15
          timeoutSeconds: 5
        readinessProbe:
            httpGet:
                path: /transmission/web/
                port: transmission
            initialDelaySeconds: 15
            timeoutSeconds: 5
      volumes:
      - name: jellyfin-pvc
        persistentVolumeClaim:
          claimName: jellyfin-pvc
      - name: config-vol
        configMap:
          name: transmission-config
