home/transmission/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: transmission
  namespace: jellyfin
spec:
  type: ClusterIP
  selector:
    app: transmission
  ports:
    - name: transmission
      protocol: TCP
      port: 8083
      targetPort: transmission
